# Cybersecurity-Toolkit

./: .gitignore  LICENSE  README.md  example_keygen.py  example_tpm_decrypter.py  pyproject.toml
keygen/: README.md  example.py
keygen/src/: keygen.py
tpm/: README.md  example.py  tpm_decrypter.py  tpm_encrypt.sh
tpm/src/: tpm_decrypter.py  tpm_encrypt.sh
